[package]
name = "search-engine-crawler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
html2text = "0.5"
sqlx = { version = "0.7", features = ["mysql", "runtime-tokio-native-tls"] }
mysql = "26.0.0"
